fix: align about title and logo

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,14 @@
 @font-face {
   font-family: 'Raleway';
-  src:
-    url('../fonts/Raleway-Regular.woff2') format('woff2'),
-    url('../fonts/Raleway-Regular.woff') format('woff');
-  font-weight: normal;
+  src: url('../fonts/Raleway-Regular.woff2') format('woff2');
+  font-weight: 400;
   font-display: swap;
 }
 
 @font-face {
   font-family: 'Raleway';
-  src:
-    url('../fonts/Raleway-Bold.woff2') format('woff2'),
-    url('../fonts/Raleway-Bold.woff') format('woff');
-  font-weight: bold;
+  src: url('../fonts/Raleway-Bold.woff2') format('woff2');
+  font-weight: 700;
   font-display: swap;
 }
 
@@ -66,6 +62,7 @@ body {
   flex-direction: column;
   gap: 8px;
   font-style: normal;
+  line-height: 1.4;
   align-items: flex-start;
   max-width: 200px;
   text-align: left;
@@ -93,8 +90,8 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  padding: 80px 50px;
+  justify-content: space-between;
+  padding: 50px;
 }
 
 .overlay {
@@ -114,6 +111,7 @@ body {
   text-transform: uppercase;
   font-size: 100px;
   line-height: 0.8;
+  letter-spacing: 0.3em;
   margin: 0;
 }
 
@@ -135,13 +133,18 @@ body {
 
 .bet-button {
   background: transparent;
-  border: 1px solid #fff;
-  color: #fff;
-  padding: 12px 24px;
+  border: 1px solid #ffffff;
+  color: #ffffff;
   cursor: pointer;
   text-transform: uppercase;
   font-family: 'Raleway', sans-serif;
   font-size: 22px;
+  width: 256px;
+  height: 51px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0; 
 }
 
 .aligned-text {
@@ -176,7 +179,9 @@ body {
 
 .lots__heading {
   margin: 0;
-  padding: 40px 0;
+  padding: 40px 0 40px 40px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
   font-size: 40px;
   text-transform: uppercase;
 }
@@ -184,7 +189,9 @@ body {
 .lots__look-more-link {
   display: block;
   width: fit-content;
-  margin-top: 30px;
+  margin: 30px 0 0 40px;
+  text-decoration: underline;
+  text-underline-offset: 4px;
   color: #000;
   text-transform: uppercase;
   font-size: 20px;
@@ -209,11 +216,28 @@ body {
   text-decoration: none;
 }
 
-.card__title,
+.card__title {
+  position: relative;
+  z-index: 2;
+  color: #fff;
+  font-family: 'Raleway', sans-serif;
+  font-size: 22px;
+  font-weight: 700; 
+  text-transform: uppercase;
+  line-height: 1.2;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 4px;
+}
+
 .card__description {
   position: relative;
   z-index: 2;
   color: #fff;
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px; 
+  font-weight: 400; 
+  line-height: 1.1;
 }
 
 .card_type_film {
@@ -227,23 +251,30 @@ body {
 .card_type_picture {
   background-image: url("../images/card-lot-03.jpg");
 }
+
 .about {
   display: grid;
-  grid-template-columns: calc((100% - 25px * 2) / 3) 1fr;
-  gap: 25px;
-  padding: 180px 50px;
+  grid-template-columns: 240px 1fr;
+  column-gap: 72px;
+  padding: 155px 50px 180px; 
+  align-items: start;
 }
 
 .about__column:first-child {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+}
+
+.about__column:last-child {
+  max-width: 693px;
 }
 
 .about__logo {
   background-color: #000;
   width: 240px;
   height: 240px;
+  margin: 0;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -251,13 +282,17 @@ body {
 }
 
 .about__logo-image {
-  width: 148px;
+  width: 141px;
+  height: auto;
 }
 
 .about__title {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
   font-size: 40px;
   text-transform: uppercase;
-  margin: 0 0 40px 0;
+  margin: 100px 0 100px;
+  line-height: 1;
 }
 
 .about__text {
@@ -295,12 +330,15 @@ body {
   list-style: none;
   padding: 0;
   margin: 0;
+  text-align: center;
 }
 
 .footer__menu-link {
   text-decoration: underline;
   color: #000;
   font-size: 18px;
+  line-height: 1.2;
+  white-space: nowrap;
 }
 
 .footer__menu-list-item {
@@ -330,7 +368,8 @@ body {
   list-style: none;
   padding: 0;
   margin: 0;
-  justify-self: end;
+  justify-self: flex-end;
+  align-items: center; 
 }
 
 .footer__social-icon {
